helados-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heladosapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helados-app
  template:
    metadata:
      labels:
        app: helados-app
    spec:
      containers:
        - name: helados-container
          image: yeumarin/apirust
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata: 
  name: helados-service
spec:
  selector:
    app: helados-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
