ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  rules:
  - host: api.ymarin.com
    http:
      paths:
        - path: /icecream
          pathType: Prefix
          backend:
            service:
              name: helados-service
              port:
                number: 8080
